Fix button contrast in Tips page masthead
Previously the button was made aqua, but there was a lot of contrast between the ui-blue and ui-aqua.

--- a/src/views/tips/tips.scss
+++ b/src/views/tips/tips.scss
@@ -39,7 +39,8 @@ $base-bg: $ui-white;
 
     &.getting-started-button {
         margin-right: 0;
-        background-color: $ui-aqua;
+        background-color: $ui-white;
+        color: $link-blue;
     }
 
     img {
